--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,24 @@
             android:normalScreens="true"
             android:largeScreens="true"
             android:xlargeScreens="true"/>
-        <activity android:name=".MainActivity" android:windowSoftInputMode="stateHidden">>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".MainActivity" android:windowSoftInputMode="stateHidden|adjustPan" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+
         <activity android:name=".Introduction" />
         <activity android:name=".Pvcpreparation" />
         <activity android:name=".Compositioninpvccompound" />
         <activity android:name=".Compounddensitycalculation" />
         <activity android:name=".Compoundpricecalculation" />
-        <activity android:name=".Autobomcalculation" />
+        <activity android:name=".Autobomcalculation" android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity android:name=".Troubleshootingguides" />
         <activity android:name=".Basicformulation" />
         <activity android:name=".Aboutme" />
-        <activity android:name=".Compounddensitypricecalculation"></activity>
+        <activity android:name=".Compounddensitypricecalculation" android:windowSoftInputMode="stateAlwaysHidden|adjustPan"></activity>
     </application>
 
 </manifest>
