--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".Introduction" />
         <activity android:name=".Pvcpreparation" />
         <activity android:name=".Compositioninpvccompound" />
@@ -32,7 +31,11 @@
         <activity android:name=".Troubleshootingguides" />
         <activity android:name=".Basicformulation" />
         <activity android:name=".Aboutme" />
-        <activity android:name=".Compounddensitypricecalculation" android:windowSoftInputMode="stateAlwaysHidden|adjustPan"></activity>
+        <activity android:name=".Rmtestprocedure" />
+        <activity android:name=".Basicrmspecification" />
+        <activity android:name=".Compounddensitypricecalculation" android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
+
+        </activity>
     </application>
 
 </manifest>
